--- a/libstdc++-v3/src/c++98/Makefile.in
+++ b/libstdc++-v3/src/c++98/Makefile.in
@@ -139,7 +139,7 @@ am__objects_6 = basic_file.lo c++locale.lo $(am__objects_4) \
 am__objects_7 = bitmap_allocator.lo pool_allocator.lo mt_allocator.lo \
 	codecvt.lo complex_io.lo globals_io.lo hash_tr1.lo \
 	hashtable_tr1.lo ios_failure.lo ios_init.lo ios_locale.lo \
-	list.lo list-aux.lo list-aux-2.lo list_associated.lo \
+	list-aux.lo list-aux-2.lo list_associated.lo \
 	list_associated-2.lo locale.lo locale_init.lo locale_facets.lo \
 	localename.lo math_stubs_float.lo math_stubs_long_double.lo \
 	stdexcept.lo strstream.lo tree.lo istream.lo istream-string.lo \
@@ -499,7 +499,6 @@ sources = \
 	ios_failure.cc \
 	ios_init.cc \
 	ios_locale.cc \
-	list.cc \
 	list-aux.cc \
 	list-aux-2.cc \
 	list_associated.cc \
